src/app/modules/post-card/post-card.component.css
.card{
    max-width: 400px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    border-top: 6px solid #000971;
    margin-bottom: 3%;
    position: relative;
    z-index: -1;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

.card-topic {
    padding-left: 3%;
    padding-top: 2%;
    padding-bottom: 0%;
    margin-bottom: 0;
    font-family: 'Cairo', sans-serif;
    font-weight: 600;
    font-size: 16px;
    color: gray;
}

.card-image {
    max-width: 100%;
    padding-top: 2%;
    padding-left: 3%;
    padding-right: 3%;
}

.card-title-h2 {
    padding-top: 2%;
    padding-left: 3%;
    margin: 0;
}

.card-title {
    font-family: 'Cairo', sans-serif;
    font-weight: 600;
    font-size: 32px;
    color: black;
    text-decoration: none;
}

.card-teaser-p {
    padding-top: 1%;
    padding-left: 3%;
    margin-bottom: 2%;
}

.card-teaser {
    font-family: 'Cairo', sans-serif;
    font-weight: 300;
    font-size: 16px;
    color: black;
    text-decoration: none;
}

.card-byline-section {
    padding-right: 3%;
    padding-top: 3%;
    padding-bottom: 2%;
}

.card-byline {
    padding-right: 3%;
    font-family: 'Cairo', sans-serif;
    font-weight: 400;
    font-size: 13px;
    color: gray;
}

